--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <style>
+
+        a {
+            padding: 1rem;
+            background-color: aquamarine;
+        }
+
+        h3 {
+            padding: 1rem;
+            background-color: cadetblue;
+        }
+
+    </style>
 </head>
 <body>
 
 <h3>Index Page</h3>
 
+<div sec:authorize="isAnonymous()">
+    <h3>당신은 익명사용자 입니다.</h3>
+</div>
+<div sec:authorize="isAuthenticated()">
+    <h3>당신은 인증된 사용자입니다.</h3>
+</div>
+
+
+<a th:href="@{/login}">로그인 페이지</a>
 
 </body>
 </html>
